# internet-computer-web-2-bridge

./: .env template  .env_example  .gitignore  Cargo.toml  README.md  dfx.json  example.env  package-lock.json  package.json  webpack.config.js
src/bridge/: Cargo.toml  clearing.rs  keys.rs  keys_example.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src/bridge_assets/src/: index.html  index.js
src/declarations/bridge/: bridge.did  bridge.did.d.ts  bridge.did.js  index.js
src/declarations/bridge_assets/: index.js
src/declarations/demo/: demo.did.d.ts  demo.did.js
src/demo/: Cargo.toml  demo.did  keys_example.rs  lib.rs  main.rs  types.rs
src/server/: actor.ts  index.ts  keys.ts  process-requests.ts
